<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>toy_threads</name>
  <version>0.0.0</version>
  <description>Some toy examples to demonstrate threading in rclpy</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
